--- a/Ejercicio_1-Parking/index.html
+++ b/Ejercicio_1-Parking/index.html
@@ -5,7 +5,7 @@
     <script src="declarar_padre.js"></script>
     <script src="iniciar_array_posiciones.js"></script>
     <script src="confirmar.js"></script>
-
+    <script src="comprobar parking.js"></script>
     <script src="declaro_coche.js"></script>
     <script src="declaro_camion.js"></script>
 
